// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Create Button with {"text": "Hello World", "variant": "error"} 1`] = `
.emotion-0 {
  background-color: #B74A66;
  padding: 0.8333333333333334em 1.6666666666666667em;
  border: none;
  outline: none;
  height: 2.8333333333333335em;
  min-width: 7.5em;
  border-radius: 1.25em;
  font-style: normal;
  font-weight: 400;
  font-weight: normal;
  font-size: 0.8333333333333334em;
  color: #fff;
}

<button
  class="emotion-0"
  type="button"
>
  Hello World
</button>
`;

exports[`Button Create Button with {"text": "Hello World", "variant": "success"} 1`] = `
.emotion-0 {
  background-color: #3d899b;
  padding: 0.8333333333333334em 1.6666666666666667em;
  border: none;
  outline: none;
  height: 2.8333333333333335em;
  min-width: 7.5em;
  border-radius: 1.25em;
  font-style: normal;
  font-weight: 400;
  font-weight: normal;
  font-size: 0.8333333333333334em;
  color: #fff;
}

<button
  class="emotion-0"
  type="button"
>
  Hello World
</button>
`;
